--- a/.github/workflows/build-boxkit.yml
+++ b/.github/workflows/build-boxkit.yml
@@ -28,6 +28,7 @@ jobs:
       fail-fast: false
       matrix:
         containerfile: 
+          - arch-blender
     steps:
       # Clone code to runner
       - name: Checkout
