Specify arch-godot container.

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -4,3 +4,11 @@ home=~/distrobox/arch-blender
 start_now=true
 exported_apps="blender"
 pull=false
+
+[arch-godot]
+image=ghcr.io/ublue-os/arch-toolbox:latest
+additional_packages="godot-mono dotnet-sdk-8.0"
+home=~/distrobox/arch-godot
+start_now=true
+exported_apps="godot"
+pull=false
